# forge-mark1

./: .env.example  .gitignore  README.md  pyproject.toml
.githooks/: post-commit
.github/workflows/: ci.yml
deploy/: README.md  forge.service  forge@.service
docs/hq/: HQ_PLAN.md  REFERENCE_ARCHITECTURE.md
docs/mark2/: MARK2_CONTEXT.md  MARK2_PLAN.md  MARK2_RESILIENCE.md  MARK2_SEAMS.md  MARK2_TOOLBELT.md  MARK2_TRUST.md
examples/plugin_probe/: __init__.py
forge/: __init__.py  __main__.py  config.py  demo.py  extensions.py
forge/agents/: __init__.py  config.py  prompt.py  registry.py
forge/agents/centurion/: profile.toml  system_prompt.md
forge/agents/optimus/: profile.toml  system_prompt.md
forge/cell/: __init__.py  base.py  docker_cell.py  factory.py  subprocess_cell.py
forge/gate/: __init__.py  events.py  peer.py  protocol.py  runner.py  server.py
forge/graph/: __init__.py  sidecar.py
forge/mcp/: __init__.py  client.py  provider.py
forge/model/: __init__.py  anthropic_model.py  base.py  errors.py  factory.py  providers.py  scripted.py
forge/skills/: __init__.py  loader.py  provider.py
forge/tools/: __init__.py  files.py  graph.py  search.py  shell.py
forge/tui/: __init__.py  ansi.py  commands.py  render.py  repl.py  session.py
forge/warden/: __init__.py  compaction.py  dispatch.py  engine.py  filestate.py  hooks.py  ledger.py  oracle.py  permissions.py  results.py  state.py  tool.py  toolsource.py
tests/: test_ask_flow.py  test_command_safety.py  test_compaction.py  test_extensions.py  test_forge.py  test_ledger.py  test_loop_state.py  test_providers.py  test_result_budget.py  test_retry.py  test_seams.py  test_search_tools.py  test_tool_batching.py  test_tui.py
